--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner" role="listbox">
                     <div class="item active">
-                        <img src="https://placehold.it/1200x400?text=IMAGE" alt="Image">
+                        <img src="Images/samycketbattre.jpg" alt="Så mycket bättre">
                     </div>
 
                     <div class="item">
-                        <img src="https://placehold.it/1200x400?text=Another Image Maybe" alt="Image">
+                        <img src="Images/aktuellt.jpg" alt="Aktuellt">
                         <div class="carousel-caption">
                         </div>
                     </div>
