--- a/aboutus.html
+++ b/aboutus.html
@@ -45,7 +45,7 @@
                         </li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="mypage.html"><i class="fas fa-sign-in-alt fa-lg"></i></a></li>
+                        <li><a href="mypage.html">Min sida <i class="fas fa-sign-in-alt fa-lg"></i></a></li>
                     </ul>
                 </div>
             </nav>
