--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <!-- jQuery library -->
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz"
         crossorigin="anonymous">
 
@@ -18,6 +18,35 @@
     <script src="script.js"></script>
 
     <link rel="stylesheet" href="styles.css" />
+    <script>
+        $(function () {
+
+            $('#contactusform').submit(function (e) {
+                e.preventDefault();
+                var name = $("#name").val();
+                var email = $("#email").val();
+                var comment = $("#comment").val();
+
+
+                $(".error").remove();
+                if (name.length < 1) {
+                    $("#name").before('<span class="error">Obligatiriskt fält</span>');
+                }
+                if (comment.length < 1) {
+                    $("#comment").before('<span class="error">Obligatiriskt fält</span>');
+                }
+                if (email.length < 1) {
+                    $("#email").before('<span class="error">Obligatiriskt fält</span>');
+                } else {
+                    var regEx = /\S+@\S+\.\S+/;
+                    var validEmail = regEx.test(email);
+                    if (!validEmail) {
+                        $("#email").before('<span class="error">Ogiltlig e-mail adress</span>');
+                    }
+                }
+            });
+        });
+    </script>
 
 </head>
 
@@ -55,20 +84,22 @@
     </div>
 
     <section>
-        <div class="form-group">
-            <label for="usr">Namn:</label>
-            <input type="text" class="form-control" id="usr">
+        <form id="contactusform" method="POST" action="">
+            <label for="name">Namn:</label>
+            <input type="text" class="form-control" id="name">
             <label for="email">E-mail:</label>
-            <input type="email" class="form-control" id="email">
+            <input type="text" class="form-control" id="email">
             <label for="comment">Meddelande:</label>
             <textarea class="form-control" rows="5" id="comment"></textarea>
             <input type="submit" value="Submit">
+            </div>
 
     </section>
 
     <footer class="container-fluid text-center">
         <a href="aboutus.html"> Om oss </a><br />
         <a href="contact.html"> Kontakta oss </a> </footer>
+
 </body>
 
 </html>
