--- a/index.html
+++ b/index.html
@@ -254,18 +254,16 @@
 
 
     <script>
+        debugger;
         function myFunction() {
             var search = document.getElementsByName("search");
             var list = document.getElementById("programlist");
             var item = list.getElementsByTagName("li");
-
             for (var i = 0; i < item.length; i++) {
 
-                
-                if (1==1) {
-                    // var x = item[i].innerText;
-                    
-                    document.write(item);
+                if (search == item[i].innerText) {
+
+                    document.write(item[i]);
                 }
             }
         }
